Kubernetes-Application-Development/IngressAccess-mTLS/aks-helloworld-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-mtls-two  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname-mtls-two
  template:
    metadata:
      labels:
        app: hostname-mtls-two
    spec:
      containers:
      - name: flask-hostname
        image: jpjofresm/flask-hostname:1.0.2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-mtls-two  
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: hostname-mtls-two
