Kubernetes-Application-Development/IngressAccess-mTLS/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-mtls
  namespace: ingress-mtls
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-mtls/ingress-mtls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - ingress-mtls.example
    secretName: ingress-mtls/aks-ingress-mtls
  rules:
  - host: ingress-mtls.example
    http:
      paths:
      - backend:
          serviceName: hostname-mtls-one
          servicePort: 5000
        path: /hello-world-one(/|$)(.*)
      - backend:
          serviceName: hostname-mtls-two
          servicePort: 5000
        path: /hello-world-two(/|$)(.*)
      - backend:
          serviceName: hostname-mtls-one
          servicePort: 5000
        path: /(.*)
